# tap-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
tap_template/: client.py  streams.py  tap.py
tests/: test_tap.py
