[tool.poetry]
name = "tap-template"
version = "0.0.1"
description = "`tap-template` is a Singer tap template, built with the Meltano SDK for Singer Taps."
authors = ["Steerco Analytics"]
license = "Apache 2.0"
keywords = ["ELT"]

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.33.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
flake8 = "^3.9.2"
isort = "^5.10.1"
mypy = "^0.910"
types-requests = "^2.26.1"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = "tap_template"

[build-system]
requires = ["poetry-core==1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-template = "tap_template.tap:TapTemplate.cli"
